classDiagram
    direction TB

%% =======================
%% Core domain interfaces
%% =======================
    class SaleableItem {
        <<interface>>
        +sellItem()
        +getPrice() double
    }

%% =======================
%% Entities (JPA Layer)
%% =======================
    class ProductEntity {
        <<abstract>>
        -Long id
        +getId() Long
        +getPrice() double
        +sellItem()
    }

    class PublicationEntity {
        <<abstract>>
        -String title
        -double price
        -int copies
        +getTitle() String
        +getCopies() int
        +getPrice() double
        +sellItem()
    }

    class BookEntity
    class MagazineEntity
    class DiscMagEntity
    class TicketEntity

    class InstrumentEntity {
        <<abstract>>
        -String brand
        -double price
        +getBrand() String
        +getPrice() double
    }

    class GuitarEntity
    class DrumKitEntity

    class CartEntity {
        -Long id
        +addProduct(ProductEntity)
        +removeProduct(ProductEntity)
    }

    class OrderEntity {
        -Long id
        -LocalDateTime orderDate
        -double totalAmount
        +addProduct(ProductEntity)
    }

%% =======================
%% Relationships
%% =======================
    SaleableItem <|.. ProductEntity

    ProductEntity <|-- PublicationEntity
    PublicationEntity <|-- BookEntity
    PublicationEntity <|-- MagazineEntity
    MagazineEntity <|-- DiscMagEntity

    ProductEntity <|-- TicketEntity
    ProductEntity <|-- InstrumentEntity
    InstrumentEntity <|-- GuitarEntity
    InstrumentEntity <|-- DrumKitEntity

    CartEntity "1" -- "*" ProductEntity : Many-to-Many
    OrderEntity "1" -- "*" ProductEntity : Many-to-Many
